--- a/style.css
+++ b/style.css
@@ -28,13 +28,13 @@ a.text:hover{text-decoration:none}
 .header{min-height:125px}
 .headercontent{margin-top:30px}
 .promo .content .footer{display:inline-block;width:100%}
-.content .panel-default>.panel-heading{background:#009dee!important;border-color:#009dee!important;color:#fff;border-radius:0;font-size:18px;text-transform:uppercase;font-weight:400}
+.content .panel-default>.panel-heading{background:#009dee!important;border-color:#009dee!important;color:#7f8189;border-radius:0;font-size:18px;text-transform:uppercase;font-weight:400}
 .header-container{display:inline-block;width:100%;border:0;position:relative;display:inline-block;width:100%;border:0;position:relative}
 .header-container .header-top{display:inline-block;width:100%;padding:5px 0;text-align:center;background:#f5f5f5}
 .header-container .header-top span{color:#171717;font-size:14px;font-weight:600;font-family:'Open Sans',sans-serif}
 .icon-menu-mb,.header-container .header-content .nav-trigger{display:none}
 .header-container .header-content .logo-content{display:inline-block;text-align:center;max-width:270px;margin:3em 0}
-.header-content{display:inline-block;width:100%;background:#FFF;text-align:center}
+.header-content{display:inline-block;width:100%;background:#7f8189;text-align:center}
 .header-container{display:inline-block;width:100%}
 .menu-header{display:inline-block;width:100%;left:0;text-align:center}
 .menu-header{width:100%;background:#009dee}
